--- a/flow-graph/static/css/style.css
+++ b/flow-graph/static/css/style.css
@@ -1,3 +1,18 @@
+/* COMMON */
+
+h1{
+    font-size: 25px;
+}
+
+/* FORM */
+
+.form-question{
+    font-size: 20px;
+    color: #000;
+}
+
+/* GRAPH */
+
 table{
     width: 100%;
     border-collapse:collapse;
