--- a/flow-graph/templates/base.html
+++ b/flow-graph/templates/base.html
@@ -1,6 +1,6 @@
 <!doctype html>
 <head>
-    <title>{% block title %}{% endblock %} - Flow Graph</title>
+    <title>{{ title }} - Flow Graph</title>
     <link rel="stylesheet" href="{{ url_for('static', filename='css/materialize.min.css') }}">
     <link rel="stylesheet" href="{{ url_for('static', filename='css/datatables.min.css') }}">
     <link rel="stylesheet" href="{{ url_for('static', filename='css/style.css') }}">
