create db and rebuild index to use sqlite

--- a/flow_graph/templates/graph/form.html
+++ b/flow_graph/templates/graph/form.html
@@ -498,7 +498,7 @@
                 <p class="form-question" >15- Comment est l'ambiance entre les personnes ? *</p>
                 <p>
                     <label>
-                        <input name="social" type="radio" value="oui" required/>
+                        <input name="social" type="radio" value="bonne" required/>
                         <span>Bonne</span>
                     </label>
                 </p>
@@ -510,7 +510,7 @@
                 </p>
                 <p>
                     <label>
-                        <input name="social" type="radio" value="non"/>
+                        <input name="social" type="radio" value="négative"/>
                         <span>Négative</span>
                     </label>
                 </p>
