--- a/flow_graph/templates/graph/form.html
+++ b/flow_graph/templates/graph/form.html
@@ -423,7 +423,7 @@
 
         <div class="row">
             <div class="col s12">
-                <p class="form-question" >14- Note ton niveau de bonheur sur dix *</p>
+                <p class="form-question" >14- Note ton niveau de bonheur sur cinq *</p>
                 <p>
                     <label>
                         <input name="happiness" type="radio" value="0" required/>
@@ -460,34 +460,46 @@
                         <span>5</span>
                     </label>
                 </p>
+            </div>
+        </div>
+
+        <div class="row">
+            <div class="col s12">
+                <p class="form-question" >14- Note ton niveau d'anxiété sur cinq *</p>
                 <p>
                     <label>
-                        <input name="happiness" type="radio" value="6"/>
-                        <span>6</span>
+                        <input name="anxiety" type="radio" value="0" required/>
+                        <span>0</span>
                     </label>
                 </p>
                 <p>
                     <label>
-                        <input name="happiness" type="radio" value="7"/>
-                        <span>7</span>
+                        <input name="anxiety" type="radio" value="1"/>
+                        <span>1</span>
                     </label>
                 </p>
                 <p>
                     <label>
-                        <input name="happiness" type="radio" value="8"/>
-                        <span>8</span>
+                        <input name="anxiety" type="radio" value="2"/>
+                        <span>2</span>
                     </label>
                 </p>
                 <p>
                     <label>
-                        <input name="happiness" type="radio" value="9"/>
-                        <span>9</span>
+                        <input name="anxiety" type="radio" value="3"/>
+                        <span>3</span>
                     </label>
                 </p>
                 <p>
                     <label>
-                        <input name="happiness" type="radio" value="10"/>
-                        <span>10</span>
+                        <input name="anxiety" type="radio" value="4"/>
+                        <span>4</span>
+                    </label>
+                </p>
+                <p>
+                    <label>
+                        <input name="anxiety" type="radio" value="5"/>
+                        <span>5</span>
                     </label>
                 </p>
             </div>
